@@ -395,7 +395,7 @@ class Smarty_Internal_Template extends Smarty_Internal_TemplateBase {
     public function decodeProperties($properties, $cache = false)
     {
         // store data in reusable Smarty_Template_Compiled
-        if (!$cache && $this->compiled->_properties === null) {
+        if (!$cache) {
             $this->compiled->_properties = $properties;
         }
 
